k8s/observability/loki/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: loki.haroldsphinx.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki
                port:
                  name: http-metrics
